# biofiles

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENCE  LICENSE  NAMESPACE  NEWS.md  README.Rmd  README.md  appveyor.yml  biofiles.Rproj  cleanup  configure  configure.in  cran-comments.md  index.html  initialize_gbLocation.R  params.json  range_gbLocation.R  ranges_gbLocation.R  width_gbLocation.R
R/: RcppExports.R  aaa.R  all-generics.R  all-generics.r  biofiles-package.R  filter.R  flanking.R  flanking.r  flatten.r  gbData-class.r  gbFeature-class.R  gbFeature-class.r  gbFeatureList-class.R  gbFeatureList-class.r  gbFeatureTable-class.R  gbHeader-class.R  gbInfo-class.R  gbLocation-class.R  gbLocation-class.r  gbRange-class.R  gbRange-class.r  gbRecord-class.R  gbRecord-class.r  gbRecordList-class.R  genome-record-from-ncbi.R  importGenBank.r  make-granges.R  make-ranges.R  misc-functions.R  parser-embl.R  parser-gbk.R  parser-general.R  parser.R  parser.r  readGB.r  retrieve.R  retrieve.r  revcomp.R  revcomp.r  select.R  (+12 more)
man/: accessor-methods.Rd  accessors.Rd  annotation.Rd  as.Rd  as.gbLocation.Rd  biofiles-package.Rd  biofiles.Rd  blanks.Rd  dbxref-methods.Rd  dbxref.Rd  dot-filter.Rd  dot-select.Rd  embl_record.Rd  end-gbFeature-method.Rd  end-methods.Rd  end.Rd  extract-methods.Rd  feature-methods.Rd  featureTable-methods.Rd  features.Rd  flatten.Rd  fuzzy-method.Rd  fuzzy-methods.Rd  fuzzy.Rd  gbFeature-class.Rd  gbFeature.Rd  gbFeatureList-class.Rd  gbFeatureList.Rd  gbFeatureTable-class.Rd  gbHeader-class.Rd  gbHeader.Rd  (+106 more)
stuff/: configure.in
(+70 files in other folders)
